--- a/css/childs.css
+++ b/css/childs.css
@@ -58,6 +58,10 @@ h2{
     border-radius: 20px;
 }
 
+#moreInfo .wrapper{
+    max-width: 100%;
+}
+
 #moreInfo .wrapper .otherPages .page:first-child article{
     padding-left: 0;
 }
