--- a/css/childs.css
+++ b/css/childs.css
@@ -1,9 +1,3 @@
-
-@font-face {
-    font-family: "SnoopyReg";
-    src: url("../fonts/snoopy_reg.otf");
-}
-
 h1, h2, h3, h4 {
     font-family: "SnoopyReg", Arial, Helvetica, sans-serif;
 }
@@ -59,6 +53,10 @@ h2{
     border-radius: 20px;
 }
 
+#moreInfo .linkPisoton{
+    padding: 40px;
+}
+
 #moreInfo .wrapper{
     max-width: 100%;
 }
@@ -82,5 +80,9 @@ h2{
 @media (min-width: 768px) { 
     .pisoton-text {
         width: auto;
+    }
+
+    #moreInfo .linkPisoton{
+        padding: 90px;
     }
 }
