--- a/css/default.css
+++ b/css/default.css
@@ -2039,7 +2039,7 @@ header .headerWrapper.pisotonB::before {
 }
 
 #teamAndFriends {
-  background-image: linear-gradient(60deg, #96deda 0%, #50c9c3 100%);
+  background-color: #68D5E1;
 }
 #teamAndFriends #formation {
   margin-left: 50px;
