--- a/css/game-panel.css
+++ b/css/game-panel.css
@@ -28,8 +28,9 @@
     border-radius: 5px;
     position: relative !important;
     top: 0;
-    cursor: pointer;
     font-family: "SnoopyReg", Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
     transition: .25s all;
 }
 
