--- a/css/pisoton.css
+++ b/css/pisoton.css
@@ -186,6 +186,10 @@
         width: 300px;
         height: 200px;
     }
+
+    .articles-links{
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 992px) { 
