Added changes to distribution in pisoton page

--- a/css/parents.css
+++ b/css/parents.css
@@ -121,6 +121,7 @@
     margin: auto;
     font-family: "SnoopyReg", Arial, Helvetica, sans-serif;
     font-size: 3rem;
+    line-height: 2rem;
     color: #68D5E1;
 }
 
