--- a/css/reasons_and_hearts.css
+++ b/css/reasons_and_hearts.css
@@ -19,6 +19,10 @@
     box-shadow: #000 2px 2px 5px;
 }
 
+#anarita #articles .opt_content_reasons article.card a {
+    display: none;
+}
+
 .card .cardDesc{
     font-size: 1rem;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
@@ -102,7 +106,12 @@
     font-family: "SnoopyReg", Arial, Helvetica, sans-serif;
 }
 
+#info.intern .textAndImg article .desc{
+    font-size: 1.2rem;
+}
+
 #info.intern .quotesWrapperBg{
+    display: block;
     width: 100%;
     height: 500px;
     margin: 50px 0;
@@ -111,8 +120,16 @@
     background-position: center;
 }
 
+
 .quotesWrapperBg{
     background-image: url('../img/pisoton/elementos-19.png');
+}
+
+
+@media (max-width: 587px){
+    #anarita #articles .opt_content_reasons article.card a {
+        display: block;
+    }
 }
 
 @media (max-width: 992px){
