--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,7 @@
+#info.intern, #videos.intern{
+    margin-top: 70px;
+}
+
 #main {
     margin-top: 70px;
 }
@@ -40,7 +44,7 @@
 }
 
 .navbar-pisoton .nav-link:first-child{
-    width: 40%;
+    width: 40%; 
     padding: 50px 30px 50px 30px;
     border-bottom-right-radius: 50px;
     font-size: 3rem;
@@ -48,15 +52,6 @@
     align-items: center;
     z-index: 1100;
     box-shadow: black 1px 2px 5px;
-}
-
-.navbar-pisoton .nav-link:first-child:hover {
-    height: 130px;
-}
-
-.navbar-pisoton .nav-link:nth-child(2){
-    margin-left: -5px;
-    width: 25%;
 }
 
 .navbar-pisoton .nav-link.adventures-link{
@@ -68,10 +63,39 @@
 }
 .navbar-pisoton .nav-link.teachers-link{
     background: #F4A300;
+    width: 25%;
 }
+
+.navbar-pisoton .nav-link.teachers-link:first-child{
+    width: 45%; 
+    font-size: 2.5rem;
+}
+
 .navbar-pisoton .nav-link.pisoton-link{
     background: #68D5E1;
     font-size: 1.7rem;
+}
+
+.navbar-pisoton .nav-link:first-child:hover {
+    height: 130px;
+}
+
+.navbar-pisoton .nav-link:nth-child(2){
+    margin-left: -5px;
+}
+
+.navbar-pisoton .nav-link.teachers-link:first-child{
+    padding: 50px 10px 50px 10px;
+}
+
+.navbar-pisoton .nav-link.pisoton-link:first-child{
+    font-size: 3.5rem;
+}
+
+@media (min-width: 768px){
+    #info.intern, #videos.intern{
+        margin-top: 150px;
+    }
 }
 
 
