--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,4 @@
-#info.intern, #videos.intern{
+#videos.intern{
     margin-top: 70px;
 }
 
@@ -143,7 +143,7 @@
 }
 
 @media (min-width: 768px){
-    #info.intern, #videos.intern{
+    #videos.intern{
         margin-top: 150px;
     }
 }
