--- a/css/timeline.css
+++ b/css/timeline.css
@@ -145,7 +145,7 @@
   content: "";
   position: absolute;
   top: 8px;
-  left: -10.5px;
+  left: -8px;
   width: 6px;
   height: 6px;
   border-radius: 100%;
@@ -205,7 +205,7 @@
     box-shadow: -230px 0 150px 50vw rgba(0, 0, 0, 0.7);
   }
   .timeline .swiper-slide-content {
-    right: 30%;
+    right: 20%;
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
@@ -258,4 +258,25 @@
   .timeline .swiper-slide-content {
     right: 20%;
   }
+}
+
+@media screen and (max-width: 768px) {
+    .timeline .swiper-container{
+        padding: 0;
+    }
+
+    .timeline .swiper-image{
+        width: 100%;
+        background-position: bottom center;
+    }
+
+    .timeline .swiper-slide .timeline-text{
+        position: relative;
+        top: 30px;
+        padding: 10px;
+        border-radius: 10px;
+        overflow: scroll;
+        background: rgba(0, 0, 0, 0.7);
+        color: #fff;
+    }
 }
