--- a/css/parents.css
+++ b/css/parents.css
@@ -70,8 +70,9 @@
     left: 0%;
     margin: auto;
     position: relative;
-    top: 40%;
+    top: 60%;
     text-align: center;
+    transform: translate(0, -50%);
 }
 
 #banner .parents-hero .articleLink{
@@ -250,7 +251,7 @@
     }
 
     .information-resources .articles-links a{
-        max-width: 45%;
+        max-width: 60%;
     }
 }
 
@@ -275,6 +276,6 @@
     }
 
     .information-resources .articles-links a{
-        max-width: 30%;
+        max-width: 35%;
     }
 }
