--- a/css/components/article-card.css
+++ b/css/components/article-card.css
@@ -2,8 +2,12 @@
     position: relative;
     top: 0;
     transition: .25s all;
+    background: #347ea1;
 }
 
+.articles.card a{
+    color: #fff;
+}
 .articles.card:hover{
     top: -10px;
     box-shadow: 5px 5px 5px 0 #000;
@@ -14,7 +18,9 @@
 }
 
 .articles.card .cardDescTitle{
-    height: 30%;
+    min-height: fit-content;
+    min-height: -moz-fit-content;
+    min-height: -webkit-fit-content;
     font-weight: 500;
 }
 
