--- a/css/components/data-emotion.css
+++ b/css/components/data-emotion.css
@@ -1,5 +1,6 @@
 #dataEmotion{
-    margin-top: 0;
+    margin-top: 20vh;
+    margin-bottom: 10vh;
     width: 90%;
 }
 
@@ -37,6 +38,13 @@
 #dataEmotion #dataEmotionHeader .circleLink:hover{
     animation: shake 1s;
     top: -10px;
+}
+
+@media(max-width: 768px){
+    #dataEmotion{
+        margin-top: 10vh;
+        margin-bottom: 5vh;
+    }
 }
 
 @media(min-width: 769px){
