--- a/css/estructura.css
+++ b/css/estructura.css
@@ -9,6 +9,18 @@
     background-position: center;
 }
 
+#emotionHeader div.title{
+    top: 0;
+    box-shadow: none;
+    transition: .5s all;
+}
+
+#emotionHeader div.title:hover {
+    top: -5px;
+    box-shadow: 5px 5px 5px black;
+    cursor: pointer;
+}
+
 #info.intern article .descBig{
     color: #88CCDB;
     flex-basis: 50%;
@@ -63,7 +75,7 @@ table#techniques{
 
 @media(max-width: 425px){
     #emotionHeader .imageDesc{
-        background-size: cover;
+        background-size: 130%;
     }
 }
 
@@ -74,7 +86,7 @@ table#techniques{
 
     #emotionHeader > div {
         height: 50vh;
-        min-height: 300px;
+        min-height: 400px;
     }
 }
 
