--- a/css/excited_to_transform.css
+++ b/css/excited_to_transform.css
@@ -27,7 +27,7 @@
     text-align: center;
     padding: 0;
     font-family: "SnoopyReg", Arial, Helvetica, sans-serif;
-    font-size: 2rem;
+    font-size: 3rem;
     line-height: 2rem;
     font-weight: 400;
     color: #FFF;
@@ -44,6 +44,7 @@
     width: 1000px;
     max-width: 90%;
     flex-direction: column;
+    justify-content: center;
 }
 
 #info.intern article.emotion-row .quote1{
@@ -58,6 +59,11 @@
 #info.intern article.emotion-row .desc{
     margin: 0;
     text-align: center;
+    flex-basis: 50%;
+}
+
+#info.intern article.emotion-row .desc p{
+    font-size: 20px;
 }
 
 .hearts-reached {
