--- a/css/formacion.css
+++ b/css/formacion.css
@@ -19,4 +19,18 @@
 
 #info.intern .quotesWrapper .quote1{
     font-style: normal;
+    padding: 40px;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 2px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#emotionHeader .imageDesc {
+    background-image: url(../img/pisoton/formacion.png);
+    background-size: cover;
+    background-position: center;
+    flex-basis: 50% !important;
 }
